tests/snapshots/integration_test__log_data@14063d22b80960beb5f73edc350d4482.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-broken-avc-info.log:0"
expression: result
info: "type=AVC msg=audit(1634728455.294:53732): apparmor=\"STATUS\" operation=\"profile_replace\" info=\"same as current profile, skipping\" profile=\"unconfined\" name=\"snap-update-ns.amazon-ssm-agent\" pid=3981295 comm=\"apparmor_parser\""
---
{
  "record_type": "AVC",
  "timestamp": 1634728455294,
  "id": 53732,
  "fields": {
    "apparmor": "STATUS",
    "comm": "apparmor_parser",
    "info": "same as current profile, skipping",
    "name": "snap-update-ns.amazon-ssm-agent",
    "operation": "profile_replace",
    "pid": "3981295",
    "profile": "unconfined"
  }
}
