tests/snapshots/integration_test__log_data@1b73bc6529b83e3aec69fcaffaadcad4.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-add-group.log:0"
expression: result
info: "type=ADD_GROUP msg=audit(1724970920.775:6704): pid=15618 uid=0 auid=4294967295 ses=4294967295 msg='op=add-group acct=\"gitlab-runner\" exe=\"/usr/sbin/useradd\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "ADD_GROUP",
  "timestamp": 1724970920775,
  "id": 6704,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "gitlab-runner",
      "addr": "?",
      "exe": "/usr/sbin/useradd",
      "hostname": "?",
      "op": "add-group",
      "res": "success",
      "terminal": "?"
    },
    "pid": "15618",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
