tests/snapshots/integration_test__log_data@1cdc6c7a9a7efb3c495ea69a5242185d.snap
---
source: tests/integration_test.rs
expression: record
info: "type=PROCTITLE msg=audit(1451781471.394:194436): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194436,
  "fields": {
    "proctitle": "bash"
  }
}
