tests/snapshots/integration_test__log_data@1d8a344d22fda9d62a72da3dc4fb969a.snap
---
source: tests/integration_test.rs
expression: record
info: "type=CWD msg=audit(1170021493.977:293):  cwd=\"/var/spool/postfix\""
---
{
  "record_type": "CWD",
  "timestamp": 1170021493977,
  "id": 293,
  "fields": {
    "cwd": "/var/spool/postfix"
  }
}
