tests/snapshots/integration_test__log_data@1e017d439fa9979b8b50f7121ef83ff4.snap
---
source: tests/integration_test.rs
expression: record
info: "type=EXECVE msg=audit(1507304439.922:1865): argc=5 a0=\"useradd\" a1=\"-u\" a2=\"3005\" a3=\"-m\" a4=\"trainer5\""
---
{
  "record_type": "EXECVE",
  "timestamp": 1507304439922,
  "id": 1865,
  "fields": {
    "a0": "useradd",
    "a1": "-u",
    "a2": "3005",
    "a3": "-m",
    "a4": "trainer5",
    "argc": 5
  }
}
