tests/snapshots/integration_test__log_data@1e9a3c256d4522196c98c7df1e4433c5-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test3.log:10"
expression: result
info: "node=auditdtest.a1959.org type=SYSCALL msg=audit(1451781471.394:194439): arch=c000003e syscall=14 success=yes exit=0 a0=2 a1=7ffdac6fe920 a2=0 a3=8 items=0 ppid=1271 pid=1281 auid=1000 uid=1000 gid=1000 euid=1000 suid=1000 fsuid=1000 egid=1000 sgid=1000 fsgid=1000 tty=(none) ses=1 comm=\"sshd\" exe=\"/usr/sbin/sshd\" subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 key=(null)"
---
{
  "record_type": "SYSCALL",
  "timestamp": 1451781471394,
  "id": 194439,
  "node": "auditdtest.a1959.org",
  "fields": {
    "a0": "2",
    "a1": "7ffdac6fe920",
    "a2": "0",
    "a3": "8",
    "arch": "c000003e",
    "auid": 1000,
    "comm": "sshd",
    "egid": 1000,
    "euid": 1000,
    "exe": "/usr/sbin/sshd",
    "exit": 0,
    "fsgid": 1000,
    "fsuid": 1000,
    "gid": 1000,
    "items": "0",
    "key": "(null)",
    "pid": "1281",
    "ppid": "1271",
    "ses": "1",
    "sgid": 1000,
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "unconfined_r",
      "type": "unconfined_t",
      "user": "unconfined_u"
    },
    "success": true,
    "suid": 1000,
    "syscall": "14",
    "tty": "(none)",
    "uid": 1000
  }
}
