tests/snapshots/integration_test__log_data@1eb09c9103708763b66cbc5e0bb680cd.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-anom-abend-2.log:1"
expression: result
info: "type=ANOM_ABEND msg=audit(1703677054.334:4223663): auid=4294967295 uid=0 gid=0 ses=4294967295 subj==/usr/bin/man//&man_groff (enforce) pid=109919 comm=\"preconv\" exe=\"/usr/bin/preconv\" sig=31 res=1\u001dAUID=\"unset\" UID=\"root\" GID=\"root\""
---
{
  "Err": {
    "Parse": "error Eof at:  (enforce) pid=109919 comm=\"preconv\" exe=\"/usr/bin/preconv\" sig=31 res=1\u001dAUID=\"unset\" UID=\"root\" GID=\"root\""
  }
}
