tests/snapshots/integration_test__log_data@21d7d80478b1a6b2484e5d3c8ec7c34f.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/auparse/test.log:1"
expression: result
info: "type=AVC msg=audit(1170021493.977:293): avc:  denied  { read write } for  pid=13010 comm=\"pickup\" name=\"maildrop\" dev=hda7 ino=14911367 scontext=system_u:system_r:postfix_pickup_t:s0 tcontext=system_u:object_r:postfix_spool_maildrop_t:s0 tclass=dir"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:   denied  { read write } for  pid=13010 comm=\"pickup\" name=\"maildrop\" dev=hda7 ino=14911367 scontext=system_u:system_r:postfix_pickup_t:s0 tcontext=system_u:object_r:postfix_spool_maildrop_t:s0 tclass=dir"
    }
  }
}
