tests/snapshots/integration_test__log_data@23706f484d42e4f88df7982bc0795787.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:21"
expression: result
info: "type=SERVICE_STOP msg=audit(1481076984.534:16): pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=irqbalance comm=\"systemd\" exe=\"/usr/lib/systemd/systemd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SERVICE_STOP",
  "timestamp": 1481076984534,
  "id": 16,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "comm": "systemd",
      "exe": "/usr/lib/systemd/systemd",
      "hostname": null,
      "res": "success",
      "terminal": null,
      "unit": "irqbalance"
    },
    "pid": "1",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
